--- a/06-Conditional-Rendering/index.html
+++ b/06-Conditional-Rendering/index.html
@@ -1,54 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task - Attribute Binding</title>
     <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
+</head>
+
+<body>
     <header class="header">
-      <section class="header__section">
-        <p class="header__task-name">💻 Coding Task</p>
-        <p class="header__bootcamp-info-wrapper">
-          <span class="header__bootcamp-modul"
-            ><strong>Modul:</strong> Web Apps with Vue.js - Part 1</span
-          >
-          <a
-            href="https://www.coding-bootcamps.eu/"
-            class="header__bootcamp-link"
-            >coding-bootcamps.eu</a
-          >
-        </p>
-      </section>
+        <section class="header__section">
+            <p class="header__task-name">💻 Coding Task</p>
+            <p class="header__bootcamp-info-wrapper">
+                <span class="header__bootcamp-modul"><strong>Modul:</strong> Web Apps with Vue.js - Part 1</span>
+                <a href="https://www.coding-bootcamps.eu/" class="header__bootcamp-link">coding-bootcamps.eu</a>
+            </p>
+        </section>
     </header>
     <main>
-      <div id="app" class="inside">
-        <div class="tab-box">
-          <nav class="tab-box__nav">
-            <button class="tab-box__nav-item">Tab 1</button>
-            <button class="tab-box__nav-item">Tab 2</button>
-            <button class="tab-box__nav-item">Tab 3</button>
-          </nav>
-          <div class="tab-box__content tab-box tab-box__content--active">
-            <section class="tab-box__content-item">
-              <h2>Content 1</h2>
-              <p>This is the content of Tab 1.</p>
-            </section>
-            <section class="tab-box__content-item">
-              <h2>Content 2</h2>
-              <p>This is the content of Tab 2.</p>
-            </section>
-            <section class="tab-box__content-item">
-              <h2>Content 3</h2>
-              <p>This is the content of Tab 3.</p>
-            </section>
-          </div>
+        <div id="app" class="inside">
+            <div class="tab-box">
+                <nav class="tab-box__nav">
+                    <button class="tab-box__nav-item" v-on:cklick="activeTab = 1"
+                        :class="{'tab-box__nav-item--activ' : aktivTab === 1}">Tab 1</button>
+                    <button class="tab-box__nav-item" v-on:klick="activeTab = 2"
+                        :class="{'tab-box__nav-item--activ' : aktivTab === 2}">Tab 2</button>
+                    <button class="tab-box__nav-item" v-on:cklick="activeTab = 3"
+                        :class="{'tab-box__nav-item--activ' : aktivTab === 3}">Tab 3</button>
+                </nav>
+                <div class="tab-box__content tab-box tab-box__content--active">
+                    <section v-if="activeTab == 1" class="tab-box__content-item">
+                        <h2>Content 1</h2>
+                        <p>This is the content of Tab 1.</p>
+                    </section>
+                    <section v-else-if="activeTab == 2" class="tab-box__content-item tab-box__content-item--active">
+                        <h2>Content 2</h2>
+                        <p>This is the content of Tab 2.</p>
+                    </section>
+                    <section v-else-if="activeTab == 3" class="tab-box__content-item">
+                        <h2>Content 3</h2>
+                        <p>This is the content of Tab 3.</p>
+                    </section>
+                    <section v-else>Sorry no content available of this tab</section>
+                </div>
+            </div>
         </div>
-      </div>
     </main>
-    <script src="https://unpkg.com/vue@next"></script>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="scripts.js"></script>
-  </body>
+</body>
+
 </html>
