--- a/07-List-Rendering/index.html
+++ b/07-List-Rendering/index.html
@@ -1,56 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Task - Attribute Binding</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <header class="header">
-      <section class="header__section">
-        <p class="header__task-name">💻 Coding Task</p>
-        <p class="header__bootcamp-info-wrapper">
-          <span class="header__bootcamp-modul"
-            ><strong>Modul:</strong> Web Apps with Vue.js - Part 1</span
-          >
-          <a
-            href="https://www.coding-bootcamps.eu/"
-            class="header__bootcamp-link"
-            >coding-bootcamps.eu</a
-          >
-        </p>
-      </section>
-    </header>
-    <main>
-      <div id="app" class="inside">
-        <h1>My Books</h1>
-        <table>
-          <thead>
-            <tr>
-              <th>title</th>
-              <th>isbn</th>
-              <th>author</th>
-              <th>publisher</th>
-              <th>price</th>
-              <th>numPages</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>High Performance Mobile Web</td>
-              <td>9781491912553</td>
-              <td>Maximiliano Firtman</td>
-              <td>O'Reilly Media</td>
-              <td>$7.00</td>
-              <td>326</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </main>
-    <script src="https://unpkg.com/vue@next"></script>
-    <script src="scripts.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Task - Attribute Binding</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
+  <header class="header">
+    <section class="header__section">
+      <p class="header__task-name">💻 Coding Task</p>
+      <p class="header__bootcamp-info-wrapper">
+        <span class="header__bootcamp-modul"><strong>Modul:</strong> Web Apps with Vue.js - Part 1</span>
+        <a href="https://www.coding-bootcamps.eu/" class="header__bootcamp-link">coding-bootcamps.eu</a>
+      </p>
+    </section>
+  </header>
+  <main>
+    <div id="app" class="inside">
+      <h1>My Books</h1>
+      <table>
+        <thead>
+          <tr>
+            <th v-for="columnName in Object.keys(books[0])" :key="columnName">{{columnName}}</th>
+            <!-- <th>title</th>
+            <th>isbn</th>
+            <th>author</th>
+            <th>publisher</th>
+            <th>price</th>
+            <th>numPages</th> -->
+          </tr>
+        </thead>
+        <tbody>
+          <tr v-for="{title, isbn, author, publisher, price, numPages} of books" :key="isbn">
+            <td v-text="title">High Performance Mobile Web</td>
+            <td v-text="isbn">9781491912553</td>
+            <td v-text="author">Maximiliano Firtman</td>
+            <td v-text="publisher">O'Reilly Media</td>
+            <td v-text="price">$7.00</td>
+            <td v-text="numPages">326</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </main>
+  <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+  <script src="scripts.js"></script>
+</body>
+
 </html>
