--- a/08-Computed-and-Methods/index.html
+++ b/08-Computed-and-Methods/index.html
@@ -44,7 +44,7 @@
       </table>
     </div>
   </main>
-  <script src="https://unpkg.com/vue@3/dist/vue.global.js%22%3E"></script>
+  <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
   <script src="scripts.js"></script>
 </body>
 
