--- a/09-Update-Coordinates-and-Fruit-List/index.html
+++ b/09-Update-Coordinates-and-Fruit-List/index.html
@@ -22,20 +22,20 @@
   <main>
     <div id="app" class="inside">
       <h1>Task 1</h1>
-      <div id="area">
+      <div id="area" @mousemove="x = $event.offsetX; y = $event.offsetY;">
         <span>x: {{ x }}, y: {{ y }}</span>
-        <div class="dead-spot">DEAD SPOT</div>
+        <div class="dead-spot" @mousemove.stop>DEAD SPOT</div>
       </div>
       <h1>Task 2</h1>
       <ul class="fruit-basket">
         <li v-for="fruit in fruitBasket" :key="fruit" class="fruit-basket--item">
           <span>{{ fruit }}</span>
-          <button>Remove</button>
+          <button @click="removeFruit(fruit)">Remove</button>
         </li>
       </ul>
     </div>
   </main>
-  <script src="https://unpkg.com/vue@3/dist/vue.global.js%22%3E"></script>
+  <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
   <script src="scripts.js"></script>
 </body>
 
